--- a/src/main/resources/application-test.properties
+++ b/src/main/resources/application-test.properties
@@ -1,11 +1,11 @@
-spring.application.name=grpc-spring-course-app
+grpc.server.inProcessName=test
+grpc.server.port=-1
+grpc.client.inProcess.address=in-process:test
 
+# H2 Configuration
 spring.datasource.url=jdbc:h2:mem:devdb;DB_CLOSE_ON_EXIT=FALSE
 spring.datasource.driverClassName=org.h2.Driver
 spring.datasource.username=sa
 spring.datasource.password=password
 spring.jpa.database-platform=org.hibernate.dialect.H2Dialect
 spring.jpa.properties.hibernate.dialect=org.hibernate.dialect.H2Dialect
-
-spring.h2.console.path=/h2-console
-
