--- a/pom.xml
+++ b/pom.xml
@@ -48,6 +48,8 @@
             <optional>true</optional>
         </dependency>
 
+
+
 		<dependency>
 			<groupId>com.h2database</groupId>
 			<artifactId>h2</artifactId>
@@ -56,6 +58,13 @@
 		<dependency>
 			<groupId>org.springframework.boot</groupId>
 			<artifactId>spring-boot-starter-test</artifactId>
+			<scope>test</scope>
+		</dependency>
+
+		<dependency>
+			<groupId>org.assertj</groupId>
+			<artifactId>assertj-core</artifactId>
+			<version>3.23.1</version>
 			<scope>test</scope>
 		</dependency>
 	</dependencies>
